[gd_scene load_steps=5 format=3 uid="uid://cnjll1ep7ijty"]

[ext_resource type="Script" path="res://Scene/Menu/minigame_menu.gd" id="1_6adji"]
[ext_resource type="Texture2D" uid="uid://bb5hqars7tdam" path="res://Assets/Background/night_bg.png" id="1_55xop"]
[ext_resource type="FontFile" uid="uid://nsdsdvtwvjbv" path="res://Assets/Game_Elements/SummerPixel22Regular-jE0W7.ttf" id="2_n3ybn"]
[ext_resource type="Texture2D" uid="uid://jqp8i7gf6s3b" path="res://Assets/Game_Elements/ui_button.png" id="3_51m4v"]

[node name="Node" type="Node"]
script = ExtResource("1_6adji")

[node name="NightBg" type="Sprite2D" parent="."]
position = Vector2(597, 323.5)
scale = Vector2(0.580078, 0.60463)
texture = ExtResource("1_55xop")

[node name="Label" type="Label" parent="NightBg"]
offset_left = -327.977
offset_top = -377.917
offset_right = 295.023
offset_bottom = -226.917
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_n3ybn")
theme_override_font_sizes/font_size = 150
text = "MINI GAME"

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 108.0
offset_top = 271.0
offset_right = 522.0
offset_bottom = 456.0
texture = ExtResource("3_51m4v")

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -45.945
offset_right = 147.0
offset_bottom = 78.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_n3ybn")
theme_override_font_sizes/font_size = 55
text = "TIC TAC TOE"
flat = true

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 628.0
offset_top = 277.0
offset_right = 1026.0
offset_bottom = 451.0
texture = ExtResource("3_51m4v")

[node name="Button" type="Button" parent="TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.518
anchor_top = 0.5
anchor_right = 0.518
anchor_bottom = 0.5
offset_left = -139.164
offset_top = -22.0
offset_right = 138.836
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_n3ybn")
theme_override_font_sizes/font_size = 65
text = "MATH QUIZ"
flat = true

[node name="TextureRect3" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 21.0
offset_top = 17.0
offset_right = 181.0
offset_bottom = 115.0
texture = ExtResource("3_51m4v")

[node name="Button" type="Button" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -33.0
offset_right = 65.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_n3ybn")
theme_override_font_sizes/font_size = 86
text = "<"
flat = true

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_tictactoe_button_pressed"]
[connection signal="pressed" from="TextureRect2/Button" to="." method="_on_mathquiz_button_pressed"]
[connection signal="pressed" from="TextureRect3/Button" to="." method="_on_button_pressed"]
